correct misspellings in tooltips

--- a/assets/html/veg-hiv-env.html
+++ b/assets/html/veg-hiv-env.html
@@ -378,10 +378,10 @@
                              <button type="button" class="btn btn-default btn-sm" id = "compress_spacing" title = "Compress spacing">
                                 <i class="fa fa-compress" ></i>
                             </button>
-                             <button type="button" class="btn btn-default btn-sm" id = "sort_ascending" title = "Sort deepest clades to the bototm">
+                             <button type="button" class="btn btn-default btn-sm" id = "sort_ascending" title = "Sort deepest clades to the bottom">
                                 <i class="fa fa-sort-amount-asc" ></i>
                             </button>
-                             <button type="button" class="btn btn-default btn-sm" id = "sort_descending" title = "Sort deepsest clades to the top">
+                             <button type="button" class="btn btn-default btn-sm" id = "sort_descending" title = "Sort deepest clades to the top">
                                 <i class="fa fa-sort-amount-desc" ></i>
                             </button>
                              <button type="button" class="btn btn-default btn-sm" id = "sort_original" title = "Restore original order">
